--- a/src/app/informations/pistes/pistes.component.html
+++ b/src/app/informations/pistes/pistes.component.html
@@ -3,7 +3,7 @@
         <Label color="black" class="page__content-placeholder" text="Ouverture des pistes" row="0" column="0" colspan="4"
         fontWeight="Bold" textAlign="center"></Label>
         <StackLayout class="hr" row="1" colspan="2"></StackLayout>
-        <!-- <Image row="2" column="0" rowspan="4" src="~/images/domaine skiable 2.png"></Image> -->
+        <!-- <Image row="2" column="0" rowspan="4" src="~/app/images/mountain_silhouette_blanc.png"></Image> -->
         <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="70%" textWrap="true" textAlign="center" row="2" column="0" rowspan="4"
         fontSize="80px"fontWeight="Bold" width="47%" height="30%" id="domaine"></Label>
         <Label backgroundColor="#087A06"color="white" class="page__content-placeholder" text="3/6" row="2" column="1" 
