--- a/src/app/informations/remontees/remontees.component.html
+++ b/src/app/informations/remontees/remontees.component.html
@@ -5,7 +5,7 @@
         fontWeight="Bold" textAlign="center"></Label>
         <StackLayout class="hr" row="1" colspan="4"></StackLayout>
     </GridLayout>
-<GridLayout backgroundColor="white" columns="*,*,*,*" rows="60,60" class="encadre" borderRadius="10%" marginTop="1%" marginLeft="5%"
+<GridLayout columns="*,*,*,*" rows="80,80" class="encadre" borderRadius="10%" marginTop="1%" marginLeft="5%"
 marginRight="5%">
     <!-- <Label color="black" class="page__content-placeholder" text="Ouverture des remontées" row="0" column="0" colspan="4" 
     fontWeight="Bold" textAlign="center"></Label>
@@ -14,15 +14,15 @@ marginRight="5%">
     <Image row="2" column="2"  src=""></Image>
     <Image row="2" column="3"  src=""></Image>
     <Image row="2" column="4"  src=""></Image> -->
-    <Label color="black" class="page__content-placeholder" text="Tapis" row="0" column="0" fontWeight="Bold" fontSize="15"></Label>
-    <Label color="black" class="page__content-placeholder" text="Teleski" row="0" column="1" fontWeight="Bold" fontSize="15"></Label>
-    <Label color="black" class="page__content-placeholder" text="Telesiège" row="0" column="2" fontWeight="Bold" fontSize="15"></Label>
-    <Label color="black" class="page__content-placeholder" text="Télécabine" row="0" column="3" fontWeight="Bold" fontSize="15"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTapis" text="Tapis" row="0" column="0" fontWeight="Bold" fontSize="15" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTeleski" text="Teleski" row="0" column="1" fontWeight="Bold" fontSize="15" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTelesiege" text="Telesiège" row="0" column="2" fontWeight="Bold" fontSize="15" color="white"></Label>
+    <Label color="black" class="page__content-placeholder" id="iconTelecabine" text="Télécabine" row="0" column="3" fontWeight="Bold" fontSize="15" color="white"></Label>
 
-    <Label color="black" class="page__content-placeholder" text="2/2" row="1" column="0" fontWeight="Bold"></Label>
-    <Label color="black" class="page__content-placeholder" text="7/7" row="1" column="1" fontWeight="Bold"></Label> 
-    <Label color="black" class="page__content-placeholder" text="14/15" row="1" column="2" fontWeight="Bold"></Label> 
-    <Label color="black" class="page__content-placeholder" text="2/3" row="1" column="3" fontWeight="Bold"></Label>   
+    <Label color="black" class="page__content-placeholder" text="2/2" row="1" column="0" fontWeight="Bold" fontSize="25"></Label>
+    <Label color="black" class="page__content-placeholder" text="7/7" row="1" column="1" fontWeight="Bold" fontSize="25"></Label> 
+    <Label color="black" class="page__content-placeholder" text="14/15" row="1" column="2" fontWeight="Bold" fontSize="25"></Label> 
+    <Label color="black" class="page__content-placeholder" text="2/3" row="1" column="3" fontWeight="Bold" fontSize="25"></Label>   
 </GridLayout>
 <GridLayout backgroundColor="#C4C4C4" rows="50,50,50,50,50,50,50,50,50,50,50,50" columns="*,*,*" marginTop="2vh">
     <Label color="black" class="page__content-placeholder" text="BEARNAIS" row="0" column="0" fontWeight="Bold"></Label>
