--- a/src/app/sos/etat/etat.component.html
+++ b/src/app/sos/etat/etat.component.html
@@ -9,7 +9,7 @@
 
 <ScrollView>
     <GridLayout class="page__content" backgroundColor="#3E3F32" >
-        <FlexboxLayout backgroundColor="#3E3F32" flexDirection="row" flexWrap="wrap" justifyContent="space-around"
+        <!-- <FlexboxLayout backgroundColor="#3E3F32" flexDirection="row" flexWrap="wrap" justifyContent="space-around"
             margin-top="50%" rows="200,50,50,50,50">
             <Label backgroundColor="#3E3F32" class="page__content-placeholder" text="" marginTop="50%"
                 row="0" color="white" fontSize=25px; fontWeight="Bold" marginbottom="10%" marginLeft="100%"></Label>
@@ -29,10 +29,21 @@
                 marginLeft="0%" backgroundColor="#106D0E">
 
                 <Label class="page__content-placeholder" [nsRouterLink]="['/sos/gravite']" text="TEMOIN" color="white" fontSize=25px; fontWeight="Bold"
-                    marginbottom="10%" marginLeft="0%"></Label>
+                    marginbottom="10%" marginLeft="0%"></Label> -->
 
-            </ContentView>
-        </FlexboxLayout>
+                    <!-- <Image src="~/app/images/snow.png" stretch="aspectFit"></Image> -->
+                    <!-- <Image src="~/images/snow.png" stretch="aspectFit"></Image> -->
+                                                                                                    <!-- <Image src="res://tete" stretch="aspectFill"></Image> -->
+                    <Image src="~/app/images/snow.png"></Image>
+                    <Image src="~/app/images/slope.png"></Image>
+                        <!-- <Image src="~/images/snow.png"></Image> -->
+                        <!-- <Image src="~/images/slope.png"></Image>  -->
+                    <!-- <Image src="res://tete" stretch="none"></Image> -->
+                    <!-- <Image src="~/images/logo.png" loadMode="async" stretch="aspectFit"></Image> -->
+                    <!-- <Image src="~/images/snow.png"></Image> -->
+
+            <!-- </ContentView>
+        </FlexboxLayout> -->
     </GridLayout>
     
 </ScrollView>
