--- a/src/app/utilisateur/gestion-compte/gestion-compte.component.html
+++ b/src/app/utilisateur/gestion-compte/gestion-compte.component.html
@@ -34,7 +34,7 @@
 </FlexboxLayout>  -->
 
 <GridLayout rows="80">
-    <Button row="0" text="CHANGER LA PHOTO DE PROFIL" class="btn btn-warning"></Button> 
+    <Button row="0" text="CHANGER LA PHOTO DE PROFIL" class="btn btn-warning" tap="onAddImageTap()"></Button> 
 </GridLayout>
 <GridLayout rows="80">
     <Button row="0" text="GESTION MOT DE PASSE" [nsRouterLink]="['/utilisateur/gestionmdp']" pageTransition="flip" class="btn btn-warning"></Button> 
