--- a/src/app/utilisateur/gestionmdp/gestionmdp.component.html
+++ b/src/app/utilisateur/gestionmdp/gestionmdp.component.html
@@ -12,7 +12,7 @@
 <StackLayout class="form" marginTop="2%" rows="20, 20, 20, 20">
     <StackLayout class="input-field">
     <Label text="GESTION MOT DE PASSE" class="motDePasse"></Label>
-    <TextField class="" hint="Mot de passe actuel" marginTop="5%"></TextField>
+    <TextField class="" hint="E-mail associé au compte" marginTop="5%"></TextField>
     </StackLayout>
 
     <StackLayout marginTop="5%">
