--- a/src/app/utilisateur/station/station.component.html
+++ b/src/app/utilisateur/station/station.component.html
@@ -1,8 +1,8 @@
 <StackLayout>
     <GridLayout class="page__content">
 
-        <GridLayout rows="350">
-            <!-- <image row="0" src="~/images/thumbnail.png"></image> -->
+        <GridLayout rows="120">
+            <image row="0" src="~/app/images/Logo Skiview.png" width="40%" height="20%"></image>
         </GridLayout>
         <GridLayout rows="350">
             <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
